--- a/teamcostco/pom.xml
+++ b/teamcostco/pom.xml
@@ -114,7 +114,11 @@
     		<artifactId>jackson-databind</artifactId>
     		<version>2.15.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.17.2</version>
+		</dependency>
 
 	</dependencies>
 
