--- a/teamcostco/pom.xml
+++ b/teamcostco/pom.xml
@@ -119,7 +119,11 @@
 			<artifactId>jackson-datatype-jsr310</artifactId>
 			<version>2.17.2</version>
 		</dependency>
-
+		<dependency>
+    		<groupId>org.springframework.cloud</groupId>
+    		<artifactId>spring-cloud-starter-aws</artifactId>
+    		<version>2.2.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
